# polydecomp-cpp

./: CMakeLists.txt  README.md  common.cpp  common.hpp  fs.glsl  main.cpp  point.cpp  point.hpp  vs.glsl
earcut/: earcut.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
learnopengl/: camera.hpp  mesh.hpp  shader.hpp
